feat: verify OTP to allow the user reset pass
