# apps/auth-service/src/routes/auth.router.ts
@@ -3,7 +3,8 @@ import {
 	loginUser,
 	registerUser,
 	userForgotPassword,
-	verifyUser
+	verifyUser,
+	verifyUserForgotPassword
 } from '../controllers/auth.controller';
 
 const router: Router = express.Router();
@@ -12,5 +13,6 @@ router.post('/register', registerUser);
 router.post('/verify', verifyUser);
 router.post('/login', loginUser);
 router.post('/forgot-pass', userForgotPassword);
+router.post('/verify-fortgot-pass', verifyUserForgotPassword);
 
 export default router;
